...
        tableView?.contentInsetAdjustmentBehavior = .never

        tableView?.register(headerType: StatusHeaderView.self)
        tableView?.register(headerType: TooltipHeaderView.self)
        tableView?.register(cellType: CGADomainTableViewCell.self)

        tableView?.accessibilityIdentifier = "CGADomainsViewController-tableView"
    }

    private func setupBarButtonItem() {
        let barButton = UIBarButtonItem(image: UIImage(systemName: "info.circle"),
                                        style: .plain, target: self,
                                        action: #selector(infoButtonTapped))

        barButton.accessibilityIdentifier = "CGADomainsViewController-infoButton"
        self.navigationItem.rightBarButtonItem = barButton
    }

    @objc private func infoButtonTapped() {
        isSelected.toggle()
        tableView?.tableHeaderView = currentHeader
...
