...
        tableView?.register(cellType: DatePickerTableViewCell.self)
        tableView?.register(cellType: TextFieldTableViewCell.self)
        tableView?.register(cellType: SelectableTableViewCell.self)
        tableView?.register(cellType: ResumedPatientTableViewCell.self)
        tableView?.register(cellType: EmptyStateTableViewCell.self)

        tableView?.accessibilityIdentifier = "NewCGAViewController-tableView"
    }

    // MARK: - Public Methods

    func setupArchitecture(interactor: NewCGALogic, router: NewCGARouter) {
        self.interactor = interactor
...
                                                           for: indexPath) as? ActionButtonTableViewCell else {
                return UITableViewCell()
            }

            cell.setup(title: LocalizedTable.start.localized, backgroundColor: .primary, delegate: interactor)

            cell.accessibilityIdentifier = "NewCGAViewController-ActionButtonTableViewCell"

            return cell
        default:
            return UITableViewCell()
        }
    }
...
